fix organization spacing

--- a/assets/sass/_theme/sections/organizations.sass
+++ b/assets/sass/_theme/sections/organizations.sass
@@ -36,7 +36,6 @@
 
 .organizations__page
     .document-content
-        padding-bottom: $spacing3
         .organization-meta
             .logo
                 figcaption
